--- a/.github/workflows/build-private.yml
+++ b/.github/workflows/build-private.yml
@@ -1,10 +1,10 @@
 name: Windows (Visual Studio)
 
-on:  [workflow_dispatch]
+on:  [push]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: [self-hosted, windows-obiwan]
     steps:
       - uses: actions/checkout@v2
 
